staging/backend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: backend-service
  namespace: staging
spec:
  selector:
    app: backend-app
  ports:
    - protocol: "TCP"
      port: 3000
      targetPort: 3000
  type: NodePort
