staging/frontend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
  namespace: staging
spec:
  selector:
    app: frontend-app
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
  type: NodePort
