staging/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: staging-main
  namespace: staging
  annotations:
    kubernetes.io/ingress.global-static-ip-name: crud-staging
spec:
  tls:
    - hosts:
      - staging.crud-challenge.com
      - stagingapi.crud-challenge.com
      secretName: testsecret-tls
  rules:
  - host: staging.crud-challenge.com
    http:
      paths:
      - backend:
          serviceName: frontend-service
          servicePort: 80
  - host: stagingapi.crud-challenge.com
    http:
      paths:
      - backend:
          serviceName: backend-service
          servicePort: 3000
